--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 .chevron {
     display: inline-block;
-    z-index: 1;
+    z-index: 0;
     width: 10px;
     height: 10px;
     border-top: 2px solid;
@@ -18,3 +18,10 @@
   .chevron.rotate {
     transform: rotate(135deg);
   }
+
+  *{
+    -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+    display: none;
+}
